# SORSA

./: .gitignore  CITATION.bib  CITATION.cff  LICENSE  README.md  auto_model.py  codeeval.py  dataset.py  environment.yml  hf_to_rwkv.py  models.py  run.py  run_glue.py  test.py  trainer.py  utils.py
.github/workflows/: python-package.yml
analysis/: analysis.py  data.ipynb  run_analysis.py
inference/: grader.py  gsm8k.py  util.py
loralib/: __init__.py  config.py  layer.py  layers.py  model.py
scripts/: merge_lora.sh  merge_pissa.sh  merge_sorsa.sh  train_lora.sh  train_pissa.sh  train_sorsa.sh
sorsalib/: README.md  __init__.py  layer.py  layers.py  model.py  pyproject.toml
sorsalib/src/sorsa/: __init__.py  config.py  layer.py  model.py  trainer.py
